--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       </div>
       <nav>
         <ul>
-          <li><a href="#">HOME</a></li>
-          <li><a href="#">ABOUT</a></li>
+          <li><a href="https://www.mohfw.gov.in/">Guidlines</a></li>
+          <li><a href="https://covidindia.org/">See State-wise</a></li>
         </ul>
       </nav>
     </header>
