--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link rel="stylesheet" href="./resources/css/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <title>COVID-19 STATS - JAVASCRIPT</title>
   </head>
   <body>
+    
     <header>
       <div class="logo">
         <img src="./resources/img/logo.png" alt="" />
@@ -76,7 +78,7 @@
     ></script>
     <script
       language="JavaScript"
-      src="http://www.geoplugin.net/javascript.gp"
+      src="https://www.geoplugin.net/javascript.gp"
       type="text/javascript"
     ></script>
     <script src="resources/js/countries.js"></script>
